--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # MongoDB connection URI (local example)
-MONGODB_URI=mongodb+srv://samarthrao937:samarthrao937@cluster0.le8gd4q.mongodb.net/queuectl?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://samarthrao937:samarthrao937@cluster0.le8gd4q.mongodb.net/?appName=Cluster0
 BACKOFF_BASE=2
 # Default max retries for new jobs
 DEFAULT_MAX_RETRIES=3
